Added lecture slots and prerequisites

--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -91,6 +91,14 @@
     </div>
     <div class="form-group">
       <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='lecture_slot'">Lecture Slot</button>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='prereq'">Prerequisite</button>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
               onclick="window.location.href='round'">Round</button>
     </div>
     <div class="form-group">
