--- a/views/lecture_slot.ejs
+++ b/views/lecture_slot.ejs
@@ -26,19 +26,17 @@
   <body>
     <h1><%= title %></h1>
     <div class="form-group">
-      <form id="module_form" action="module" role="form" method="post">
+      <form id="lecture_slot_form" action="lecture_slot" role="form" method="post">
         <div class="form-group">
-          <label style="font-weight:bold;font-size:larger;">Module Info</label>
-          <div class="form-group" id="div-mod-code">
-            <label for="mod_code">Module Code</label>
-            <input type="text" class="form-control" id="mod_code" name="mod_code"
-                   placeholder="Enter Module Code" required="required">
-          </div>
-          <div class="form-group" id="div-mod-name">
-            <label for="mod_name">Module Name</label>
-            <input type="text" class="form-control" id="mod_name" name="mod_name"
-                   placeholder="Enter Module Name" required="required">
-          </div>
+          <label for="module">Module</label>
+          <select class="form-control" id="module" name="module" required="required">
+            <option value="" disabled="disabled" selected="selected">Select Module</option>
+            <% modules.forEach(module => { %>
+              <option value="<%= module.mod_code %>">
+                <%= module.mod_code %> <%= module.mod_name%>
+              </option>
+            <% }); %>
+          </select>
         </div>
         <div class="form-group">
           <label style="font-weight:bold;font-size:larger;">Lecture Slot Info</label>
@@ -77,41 +75,10 @@
                    placeholder="Enter Lecture Quota" required="required">
           </div>
         </div>
-        <div id="btn-submit">
+        <div>
           <button type="submit" class="btn btn-primary btn-block">Submit</button>
         </div>
       </form>
-    </div>
-    <div class="form-group">
-      <table class="table" id="table-modules">
-        <caption style="text-align: center;">Modules</caption>
-        <thead>
-        <tr>
-          <th scope="col">No.</th>
-          <th scope="col">Module Code</th>
-          <th scope="col">Module Name</th>
-          <th scope="col">Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% let i = 1; %>
-        <% modules.forEach(module => { %>
-          <tr>
-            <td><%= i %></td>
-            <td><%= module.mod_code %></td>
-            <td><%= module.mod_name %></td>
-            <td>
-              <!-- TODO: Module is linked to other entities (Require and Prereq). Do we really want to delete modules? -->
-              <input type="button" id="btn-delete-module" value="Delete"/>
-
-              <!-- TODO: When LECTURES button is clicked, show all lecture slots for that row's module code -->
-              <input type="button" id="btn-lectures" value="Lectures"/>
-            </td>
-          </tr>
-          <% i++; %>
-        <% }); %>
-        </tbody>
-      </table>
     </div>
     <div class="form-group" id="div-lectures">
       <table class="table" id="table-lectures">
@@ -158,56 +125,27 @@
         <button type="submit" class="btn btn-primary">Logout</button>
       </form>
     </div>
-<!--    To delete modules. Modules ae linked to many entities. Have to reconsider -->
-<!--    <script> -->
-<!--      $("#table-modules").on('click','#btn-delete-module',function() {-->
-<!--        const currentRow = $(this).closest("tr"); // get the current row-->
-<!--        const mod_code = currentRow.find("td:eq(1)").text(); // get current row 2nd TD-->
-<!--        window.location.href='module/delete_module?module=' + mod_code;-->
-<!--      });-->
-<!--    </script>-->
     <script>
-      $(document).ready(function() {
-        // code to read selected table row cell data (values).
-        $("#table-modules").on('click','#btn-lectures',function() {
-          const currentRow = $(this).closest("tr"); // get the current row
-          const mod_code = currentRow.find("td:eq(1)").text(); // get current row 3rd TD
-
-          // var content = '<table>' +
-          //         '<thead>' +
-          //         '<tr>' +
-          //         '<th>Day</th>' +
-          //         '<th>Start Time</th>' +
-          //         '<th>End Time</th>' +
-          //         '<th>Quota</th>' +
-          //         '<th>Module Code</th>' +
-          //         '<th>Action</th>' +
-          //         '</tr>' +
-          //         '</thead>' +
-          //         '<tbody>';
-          //
-          // content += '</tbody></table>';
-          // $('#div-lecture-slots').append(content);
-        });
+      $("#table-lectures").on('click','#btn-delete-lecture',function() {
+        const currentRow = $(this).closest("tr"); // get the current row
+        const mod_code = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
+        const sem = currentRow.find("td:eq(2)").text();
+        const day = currentRow.find("td:eq(3)").text();
+        const s_time_lect = currentRow.find("td:eq(4)").text();
+        const e_time_lect = currentRow.find("td:eq(5)").text();
+        window.location.href='lecture_slot/delete_lecture_slot?' +
+                'module=' + mod_code +
+                '&sem=' + sem +
+                '&day=' + day +
+                '&s_time_lect=' + s_time_lect +
+                '&e_time_lect=' + e_time_lect;
       });
     </script>
-<!--    To display a nested lecture table-->
-<!--    <script>-->
-<!--      $(document).delegate('#btn-lectures','click',function() {-->
-<!--        $('[colspan="5"]').parent('tr').remove();-->
-<!--        $(this).parents('tr').after('<tr/>').next().append('<td colspan="5"/>')-->
-<!--                .children('td').append('<div/>').children()-->
-<!--                .css('background','#fcfcfc').html($('#div-lecture-slots').html());-->
-<!--      });-->
-<!--    </script>-->
     <script>
       (function() {
         window.addEventListener('load', function() {
           <% if (lectures.length === 0) { %>
-            document.getElementById('table-lectures').style.display = "none";
-          <% } %>
-          <% if (modules.length === 0) { %>
-            document.getElementById('table-modules').style.display = "none";
+          document.getElementById('table-lectures').style.display = "none";
           <% } %>
         });
       })();
@@ -216,7 +154,7 @@
       window.onmousedown = function (event) {
         var eventTarget = event.target;
         if (eventTarget.tagName.toLowerCase() === 'option' &&
-                eventTarget.parentNode.hasAttribute('multiple')) {
+          eventTarget.parentNode.hasAttribute('multiple')) {
           event.preventDefault();
 
           // toggle selection
