--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -26,76 +26,51 @@
   <body>
     <h1><%= title %></h1>
     <div class="form-group">
-      <form id="program_form" action="program" role="form" method="post">
-        <div class="form-group">
-          <label for="program">Program</label>
-          <input type="text" class="form-control" id="program" name="program"
-                 placeholder="Enter Program" required="required">
-        </div>
-        <div class="form-group">
-          <label for="modules">Required Modules</label>
-          <select multiple="multiple" class="form-control" id="modules" name="modules"
-                  required="required" size="<%= 1 + (modules.length * 0.5) %>">
-            <% modules.forEach(module => { %>
-              <option value="<%= module.mod_code %>">
-                <%= module.mod_code %> <%= module.mod_name%>
+      <form id="prereq_form" role="form" method="post">
+        <h4 id="h4-no-prereqs">This module has no prerequisites.</h4>
+        <div class="form-group" id="div-prereqs">
+          <label for="children">Prerequisites</label>
+          <select multiple="multiple" class="form-control" id="children"
+                  name="children" size="<%= 1 + (children.length * 0.5) %>">
+            <% children.forEach(child => { %>
+              <option value="<%= child.mod_code %>">
+                <%= child.mod_code %> <%= child.mod_name %>
               </option>
             <% }); %>
           </select>
         </div>
         <div>
-          <button type="submit" class="btn btn-primary btn-block">Submit</button>
+          <button type="submit" class="btn btn-primary btn-block"
+                  id="btn-prereqs" onclick="submitChildForm()">Submit</button>
         </div>
       </form>
     </div>
     <div class="form-group">
-      <table class="table" id="table-programs">
-        <caption style="text-align: center;">Programs</caption>
-        <thead>
-        <tr>
-          <th scope="col">No.</th>
-          <th scope="col">Programs</th>
-          <th scope="col">Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% let i = 1; %>
-        <% programs.forEach(program => { %>
-          <% if (program.prog_name !== 'Unspecified') { %>
-            <tr>
-              <td><%= i %></td>
-              <td><%= program.prog_name %></td>
-              <td>
-                <input type="button" id="btn-delete" value="Delete"/>
-              </td>
-            </tr>
-            <% i++; %>
-          <% } %>
-        <% }); %>
-        </tbody>
-      </table>
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='../prereq'">Previous</button>
     </div>
     <div class="form-group">
       <button type="submit" class="btn btn-primary"
-              onclick="window.location.href='dashboard_admin'">Back to Home</button>
+              onclick="window.location.href='../dashboard_admin'">Back to Home</button>
     </div>
     <div class="form-group">
-      <form action="logout" role="form" method="post">
+      <form action="../logout" role="form" method="post">
         <button type="submit" class="btn btn-primary">Logout</button>
       </form>
     </div>
     <script>
-      $("#table-programs").on('click','#btn-delete',function() {
-        const currentRow = $(this).closest("tr"); // get the current row
-        const prog_name = currentRow.find("td:eq(1)").text(); // get current row 3rd TD
-        window.location.href='program/delete_program?program=' + prog_name;
-      });
+      function submitChildForm() {
+        const parent = "<%= parent %>";
+        window.location.href='../prereq_child/select_child?' + 'parent=' + parent;
+      }
     </script>
     <script>
       (function() {
         window.addEventListener('load', function() {
-          <% if (programs.length === 0) { %>
-          document.getElementById('table-programs').style.display = "none";
+          <% if (children.length === 0) { %>
+          document.getElementById('div-prereqs').style.display = "none";
+          document.getElementById('btn-prereqs').style.display = "none";
+          document.getElementById('h4-no-prereqs').style.display = "block";
           <% } %>
         });
       })();
