--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -62,8 +62,13 @@
       </tbody>
     </table>
     <div class="form-group">
-      <button type="submit" class="btn btn-primary" id="btn-register" name="btn-register"
-              onclick="window.location.href='register_module'">Register</button>
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='register_module'">Register Module</button>
+    </div>
+    <!-- TODO: Button to redirect to Appeal page -->
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='appeal'">Appeal</button>
     </div>
     <div class="form-group">
       <form action="logout" role="form" method="post">
