--- a/views/register_module.ejs
+++ b/views/register_module.ejs
@@ -25,7 +25,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <table class="table">
+    <table class="table" style="text-align: center; margin-top: 30px" id="table_registered">
         <thead>
         <tr>
             <th scope="col">Rank</th>
@@ -34,22 +34,18 @@
             <th scope="col">Lecture Start Time</th>
             <th scope="col">Lecture End Time</th>
             <th scope="col">Register Status</th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
         <% for(var i=0; i<register_list.length; i++) { %>
-            <tr>
+            <tr value="<%=i%>">
                 <td>
-                    <select class="form-control" style="width: 50%;height: 80%" id="rank" name="rank" required="required" >
+                    <select class="form-control" style="width: 60%;height: 80%;margin-left: 20%" id="rank<%=i%>" name="rank" required="required" onchange="onChangeRank(<%=i%>)" >
                         <option value="<%= register_list[i].rank_pref%>" disabled="disabled" selected="selected"><%= register_list[i].rank_pref%></option>
-                        <option value=1>1</option>
-                        <option value=2>2</option>
-                        <option value=3>3</option>
-                        <option value=4>4</option>
-                        <option value=5>5</option>
-                        <option value=6>6</option>
-                        <option value=7>7</option>
-                        <option value=8>8</option>
+                        <% for(var j=1; j<register_list.length+1; j++) { %>
+                            <option value="<%=j%>"><%=j%></option>
+                        <% } %>
                     </select>
                 </td>
                 <td value="<%= register_list[i].mod_code%>"><%= register_list[i].mod_code%></td>
@@ -57,60 +53,54 @@
                 <td value="<%= register_list[i].s_time_lect%>"><%= register_list[i].s_time_lect%></td>
                 <td value="<%= register_list[i].e_time_lect%>"><%= register_list[i].e_time_lect%></td>
                 <td value="<%= register_list[i].reg_status%>"><%= register_list[i].reg_status%></td>
+                <td>
+                    <input type="button" id="btn-delete" value="Delete"/>
+                </td>
             </tr>
         <% } %>
         </tbody>
     </table>
-    <form id="register_module_form" action="register_module" style="width: 20%; margin-bottom: 50px" role="form" method="post">
+
+        <div class="form-group">
+            <% if(err_msg != ""){ %>
+                <label style="color: #721c24"><%= err_msg%></label>
+            <% } else{ %>
+                <label></label>
+            <% } %>
+        </div>
+        <div class="form-group" style="float: right">
+            <button onclick="onClickUpdate()" id="btn-submit" class="btn btn-success">Update Ranking</button>
+        </div>
+
+    <div style="width: 20%; margin-bottom: 70px; margin-top: 80px">
       <div class="form-group" id="div-module" style="display:block;">
         <label for="module">Module</label>
         <select class="form-control" id="module" name="module" required="required" onchange="onChangeModule()" >
-          <option value="<%= selected_mod_code%>" disabled="disabled" selected="selected"><%= selected_mod_code%></option>
+          <option value="<%= selected_mod_code%>" disabled="disabled" selected="selected"><%= selected_mod_code%> <%= selected_mod_name%></option>
           <% for(var i=0; i<modules.length; i++) { %>
                 <option value="<%= modules[i].mod_code%>"><%= modules[i].mod_code%> <%= modules[i].mod_name%></option>
           <% } %>
         </select>
       </div>
-        <div>
-            <button id="btn-add" class="btn btn-success" data-toggle="modal" data-target="#myModalAdd">Add</button>
+        <div class="form-group" id="div-module" style="display:block;">
+            <label for="lecture_slots">Lecture Slots</label>
+            <select class="form-control" id="lecture_slots" name="lecture_slots" required="required" >
+                <option value="" disabled="disabled" selected="selected">Select Lecture Slot</option>
+                <% if(lecture_slots.length>0){ %>
+                    <% for(var i=0; i<lecture_slots.length; i++) { %>
+                        <option value="<%= i%>"><%= lecture_slots[i].day%>,<%= lecture_slots[i].s_time_lect%>-<%= lecture_slots[i].e_time_lect%></option>
+                    <% } %>
+                <% } else{ %>
+                    <option> </option>
+                <% } %>
+            </select>
         </div>
-
-        <form action="/save" method="post">
-            <div class="modal fade" id="myModalAdd" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Lecture Slot</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="form-group">
-                                <label for="lecture_slots">Lecture Slots</label>
-                                <select class="form-control" id="lecture_slots" name="lecture_slots" required="required" >
-                                    <option value="" disabled="disabled" selected="selected">Select Lecture Slot</option>
-                                    <% for(var i=0; i<lecture_slots.length; i++) { %>
-                                        <option value="<%= lecture_slots[i].s_time_lect%>"><%= lecture_slots[i].day%> <%= lecture_slots[i].s_time_lect%> <%= lecture_slots[i].e_time_lect%></option>
-                                    <% } %>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-
-    </form>
-
-
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div>
+            <button onclick="onClickSave()" id="btn-add" class="btn btn-success">Add</button>
+        </div>
     </div>
+
+
     <div class="form-group">
       <button type="submit" class="btn btn-primary"
               onclick="window.location.href='dashboard_student'">Back to Home</button>
@@ -120,59 +110,52 @@
         <button type="submit" class="btn btn-primary">Logout</button>
       </form>
     </div>
-<!--     <script> -->
-<!--       function onChangeRole() { -->
-<!--         if (document.getElementById('role').value === 'Student' || document.getElementById('role').value === '') { -->
-<!--           // Hide -->
-<!--           document.getElementById('div-modules-set').style.display = "none"; -->
-
-<!--           // Display -->
-<!--           document.getElementById('div-seniority').style.display = "block"; -->
-<!--           document.getElementById('div-modules-taken').style.display = "block"; -->
-
-<!--           // Compulsory to be Filled -->
-<!--           document.getElementById('seniority').required = "required"; -->
-<!--         }  -->
-<!--         else if (document.getElementById('role').value === 'Admin') { -->
-<!--           // Hide -->
-<!--           document.getElementById('div-seniority').style.display = "none"; -->
-<!--           document.getElementById('div-modules-taken').style.display = "none"; -->
-
-<!--           // Display -->
-<!--           document.getElementById('div-modules-set').style.display = "block"; -->
-
-<!--           // Not compulsory to be Filled -->
-<!--           document.getElementById('seniority').required = ""; -->
-<!--         } -->
-<!--       } -->
-<!--     </script> -->
 
     <script>
         function onChangeModule() {
             const mod_code = document.getElementById('module').value;
-            console.log(mod_code);
             window.location.href='register_module/add_module?' +
                 'module=' + mod_code;
         }
     </script>
-<!--    <script>-->
-<!--        $("#register_module_form").on('click','#btn-add',function() {-->
-<!--            const mod_code = document.getElementById('module').value;-->
-<!--            console.log(mod_code);-->
-<!--            window.location.href='register_module/add_module?' +-->
-<!--                'module=' + mod_code;-->
-<!--        });-->
-<!--    </script>-->
-    <script src="/public/javascripts/bootstrap.js"></script>
     <script>
-      (function() {
-        window.addEventListener('load', function() {
-          var forms = [document.getElementById('register_module_form')];
-          var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', check, false);
-          })
+        function onClickSave() {
+            const index = document.getElementById('lecture_slots').value;
+            window.location.href='register_module/save?' +
+                'index=' + index;
+        }
+    </script>
+    <script>
+        function onClickUpdate() {
+            window.location.href='register_module/update_rankings';
+        }
+    </script>
+    <script>
+        $("#table_registered").on('click','#btn-delete',function() {
+            const currentRow = $(this).closest("tr"); // get the current row
+            const mod_code = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
+            window.location.href='register_module/delete?' +
+                'module=' + mod_code;
         });
-      })();
+    </script>
+    <script>
+        function onChangeRank(i) {
+            const index = i;
+            const rank_pref = document.getElementById('rank'+index).value;
+            window.location.href='register_module/update_rank?' +
+                'index=' + index +
+                '&rank_pref=' + rank_pref;
+        }
+    </script>
+    <script>
+      // (function() {
+      //   window.addEventListener('load', function() {
+      //     var forms = [document.getElementById('register_module_form')];
+      //     var validation = Array.prototype.filter.call(forms, function(form) {
+      //       form.addEventListener('submit', check, false);
+      //     })
+      //   });
+      // })();
     </script>
 
 
