--- a/views/register_module.ejs
+++ b/views/register_module.ejs
@@ -52,7 +52,7 @@
                 <td value="<%= register_list[i].day%>"><%= register_list[i].day%></td>
                 <td value="<%= register_list[i].s_time_lect%>"><%= register_list[i].s_time_lect%></td>
                 <td value="<%= register_list[i].e_time_lect%>"><%= register_list[i].e_time_lect%></td>
-                <td value="<%= register_list[i].reg_status%>"><%= register_list[i].reg_status%></td>
+                <td value="<%= register_list[i].status%>"><%= register_list[i].status%></td>
                 <td>
                     <input type="button" id="btn-delete" value="Delete"/>
                 </td>
@@ -147,7 +147,5 @@
                 '&rank_pref=' + rank_pref;
         }
     </script>
-
-
   </body>
 </html>
