--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -83,6 +83,10 @@
     </table>
     <div class="form-group">
       <button type="submit" class="btn btn-primary"
+              onclick="window.location.href='dashboard_admin/allocate'">Allocate</button>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary"
               onclick="window.location.href='program'">Program</button>
     </div>
     <div class="form-group">
